--- a/hotketok-config-server/build.gradle
+++ b/hotketok-config-server/build.gradle
@@ -24,7 +24,11 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-config-server'
+	implementation "org.springframework.cloud:spring-cloud-starter-bus-amqp"
+	implementation "org.springframework.boot:spring-boot-starter-actuator"
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
