chore: API Gateway 설정

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = 'hotketok'
 
 include(
         "hotketok-config-server",
-        "hotketok-eureka-server"
+        "hotketok-eureka-server",
+        "hotketok-api-gateway"
 )
