--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'hotketok'
 
 include(
+        "hotketok-common-service",
         "hotketok-config-server",
         "hotketok-eureka-server"
 )
