--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,6 @@ include(
         "hotketok-config-server",
         "hotketok-eureka-server",
         "hotketok-api-gateway",
-        "hotketok-jpa-service"
+        "hotketok-jpa-service",
+        "hotketok-requestform-service"
 )
