--- a/hotketok-api-gateway/src/main/resources/application.yml
+++ b/hotketok-api-gateway/src/main/resources/application.yml
@@ -1,12 +1,3 @@
 spring:
-  application:
-    name: apigateway-service
-
-  cloud:
-    config:
-      name: ${API_GATEWAY_CONFIG_NAME:apigateway-service}
-
-  # --- 아래는 현재 로컬 환경 설정 ---
-  # 로컬에서 Config 서버를 사용하기 위한 설정
-  config:
-    import: "configserver:http://${CONFIG_SERVER_NAME:localhost}:8888"
+  profiles:
+    active: local
