--- a/hotketok-requestform-service/src/main/resources/application.yml
+++ b/hotketok-requestform-service/src/main/resources/application.yml
@@ -1,9 +1,3 @@
 spring:
-  application:
-    name: requestform-service
-  cloud:
-    config:
-      name: ${REQUESTFORM_SERVICE_CONFIG_NAME:requestform-service}
-  config:
-    import: "configserver:http://${CONFIG_SERVER_NAME:localhost}:8888"
-
+  profiles:
+    active: local
