--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,6 @@ include(
         "hotketok-eureka-server",
         "hotketok-api-gateway",
         "hotketok-jpa-service",
-        "hotketok-requestform-service"
+        "hotketok-requestform-service",
+        "hotketok-infra-service"
 )
