chore: 요청서 서비스에서 infra-service를 사용할 수 있게 url 가져오도록 설정 (로컬로만 설정되어있음)

--- a/hotketok-requestform-service/src/main/resources/application-local.yml
+++ b/hotketok-requestform-service/src/main/resources/application-local.yml
@@ -46,3 +46,7 @@ logging:
   level:
     org.hibernate.SQL: debug
 
+client:
+  infra-service:
+    url: http://localhost:8081 # infra-service의 주소
+
