feat: 서비스 등록 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,6 @@ include(
         "hotketok-common-service",
         "hotketok-config-server",
         "hotketok-eureka-server",
-        "hotketok-api-gateway"
+        "hotketok-api-gateway",
+        "hotketok-chatting-server",
 )
