--- a/hotketok-infra-service/src/main/resources/application-local.yml
+++ b/hotketok-infra-service/src/main/resources/application-local.yml
@@ -5,6 +5,11 @@ spring:
   application:
     name: infra-service
 
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 200MB
+
 cloud:
   provider: aws # aws ?? ncloud ? ??? ???? ??
 
