chore: user-service(사용자 서비스) 모듈 초기설정

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,6 @@ include(
         "hotketok-api-gateway",
         "hotketok-jpa-service",
         "hotketok-requestform-service",
-        "hotketok-infra-service"
+        "hotketok-infra-service",
+        "hotketok-user-service"
 )
