[feat] 수리요청서 작성 API 및 AI를 활용해 이미지를 인식 후 설명서를 작성해주는 API 개발 (#19)
* feat: 요청서,요청서 사진 도메인 Entity 생성

* feat: 요청서,요청서 repository 생성

* feat: 요청서 관련 에러코드 생성

* feat: 사용자 서비스에서 사용자id,집주인id,집주소를 가져오기 위한 DTO 생성

* feat: 요청서 생성을 위한 DTO 생성

* feat: 빌더 패턴을 이용한 객체 생성 메서드 개발

* feat: 수리 요청서 작성 API 개발(현재 사진 업로드 기능이 없어 추후 개발 예정)

* feat: 불필요한 파일들 삭제

* chore: infra-service 모듈 생성

* feat: 이미지 업로드 및 삭제를 위한 요청/응답 dto 개발

* feat: 이미지 업로드 실패시 ErrorCode 개발

* feat: 이미지 업로드 서비스 인터페이스 개발 및 aws 구현체 개발(추후 네이버 클라우드 계정 받으면 변경 조치)

* feat: 이미지 업로드 및 삭제 내부 API 개발

* fix: 이미지 업로드 기능에서 버킷 내 폴더 지정 가능하도록 수정

* chore: 요청서 서비스에서 infra-service를 사용할 수 있게 url 가져오도록 설정 (로컬로만 설정되어있음)

* feat: FeignClient를 사용하기 위한 애노테이션 추가

* feat: 요청서 서비스에서 인프라 서비스의 사진 업로드/삭제 기능을 사용하기 위한 DTO 개발

* feat: 요청서 서비스에서 인프라 서비스의 사진 업로드/삭제 기능을 사용하기 위한 internalAPI 개발

* feat: 요청서 외부 API에서 인프라 서비스 내부 API 호출 테스트를 위한 예시 컨트롤러 개발 및 테스트 진행

* fix: 이미지 업로드 실패 에러코드 수정

* fix: 불필요한 파일 삭제

* feat: 요청서 이미지 빌더 패턴을 이용해 객체 생성기능 추가

* fix: application-local 설정 create -> update로 변경

* feat: 이미지 아이디들로 DB 데이터 전체 삭제

* fix: infra-service에서 이미지 업로드 API를 활용하여 요청서 서비스 작성하는 API 개발(회원 정보를 가져오는 부분 추가예정)

* fix: 요청서 서비스 설정파일에 GPT 설정내용 추가 및 이미지 최대크기 설정, 인프라 서비스 설정파일에 이미지 최대크기 설정

* feat: AI 활용을 위한 GPT 호출 API 개발

* feat: GPT API 응답값을 정제하기 위한 파서 개발 및 프롬프트 개발

* feat: AI를 활용한 수리요청서 작성 도움 API 응답값 DTO 설정

* feat: AI를 활용한 수리요청서 작성도움 API 개발

* fix: 불필요한 파일 삭제

* fix: 서비스와 API 이름 통일

* fix: 수리요청서 작성 API 응답값으로 요청서ID로 바꾸도록 수정

--- a/hotketok-requestform-service/src/main/resources/application-local.yml
+++ b/hotketok-requestform-service/src/main/resources/application-local.yml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: requestform-service
+
+  servlet:
+    multipart:
+      max-file-size: 50MB    # 파일 하나의 최대 크기
+      max-request-size: 200MB # 전체 요청의 최대 크기
+
   cloud:
     kubernetes:
       config:
@@ -25,7 +31,7 @@ spring:
   # ===== JPA =====
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
@@ -45,6 +51,15 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
+
+
+openai:
+  model: ${GPT_MODEL}
+  api:
+    key: ${GPT_API_KEY}
+    url: ${GPT_API_URL}
+
+
 
 client:
   infra-service:
