--- a/hotketok-infra-service/src/main/resources/application-local.yml
+++ b/hotketok-infra-service/src/main/resources/application-local.yml
@@ -5,8 +5,15 @@ spring:
   application:
     name: infra-service
 
+
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 200MB
+
+
 cloud:
-  provider: aws # aws ?? ncloud ? ??? ???? ??
+  provider: aws # aws,ncloud
 
 aws:
   s3:
