chore: auth-service(인증 서비스) 모듈 초기설정

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,6 @@ include(
         "hotketok-jpa-service",
         "hotketok-requestform-service",
         "hotketok-infra-service",
-        "hotketok-user-service"
+        "hotketok-user-service",
+        "hotketok-auth-service"
 )
