--- a/hotketok-chatting-server/build.gradle
+++ b/hotketok-chatting-server/build.gradle
@@ -18,10 +18,45 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springCloudVersion', "2025.0.0")
+}
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation project(':hotketok-common-service')
+	implementation project(':hotketok-chatting-service')
+
+	// Spring Cloud Eureka
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+	// OpenFeign
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	// Kafka
+	implementation 'org.springframework.kafka:spring-kafka'
+
+	// lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// H2
+	runtimeOnly 'com.h2database:h2'
+
+	//MySQL
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Web socket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
