chore: build.gradle 프로젝트 등록 주석 해제

--- a/hotketok-chatting-service/build.gradle
+++ b/hotketok-chatting-service/build.gradle
@@ -23,8 +23,8 @@ ext {
 }
 
 dependencies {
-//	implementation project(':hotketok-common-service')
-//	implementation project(':hotketok-chatting-service')
+	implementation project(':hotketok-common-service')
+	implementation project(':hotketok-chatting-service')
 
 	// Spring Cloud Eureka
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
