chore: jpa 의존성 등록 추가

--- a/hotketok-chatting-service/build.gradle
+++ b/hotketok-chatting-service/build.gradle
@@ -24,7 +24,7 @@ ext {
 
 dependencies {
 	implementation project(':hotketok-common-service')
-	implementation project(':hotketok-chatting-service')
+	implementation project(':hotketok-jpa-service')
 
 	// Spring Cloud Eureka
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
