fix: redis 환경변수 주입 설정 수정

--- a/hotketok-auth-service/src/main/resources/application-local.yml
+++ b/hotketok-auth-service/src/main/resources/application-local.yml
@@ -30,3 +30,7 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
+
+client:
+  user-service:
+    url: http://localhost:8084 # infra-service의 주소
