--- a/hotketok-chatting-service/src/main/resources/application-local.yml
+++ b/hotketok-chatting-service/src/main/resources/application-local.yml
@@ -1,13 +1,9 @@
 server:
-  port: 8084
+  port: 8086
 
 spring:
   application:
     name: chatting-service
-  cloud:
-    kubernetes:
-      config:
-        enabled: false
 
   # ===== H2 콘솔 =====
   h2:
@@ -16,8 +12,14 @@ spring:
       path: /h2-console
 
   # ===== 데이터소스 =====
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/chatting
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+
   datasource:
-    url: jdbc:h2:tcp://localhost/~/chatting
+    url: jdbc:h2:file:~/chatting
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -45,8 +47,3 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
-
-client:
-  infra-service:
-    url: http://localhost:8081 # infra-service의 주소
-
