feat: 전화번호 인증 (SMS를 통한 전화번호 인증) 서비스개발

--- a/hotketok-auth-service/build.gradle
+++ b/hotketok-auth-service/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	implementation project(':hotketok-common-service')
 	implementation project(':hotketok-jpa-service')
 
+	// SMS 서비스
+	implementation 'net.nurigo:sdk:4.3.0'
+
 	// Spring Cloud Eureka
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
