fix: api-gateway에 인증 서비스 라우팅 추가 및 불필요한 의존성 삭제

--- a/hotketok-api-gateway/src/main/resources/application-local.yml
+++ b/hotketok-api-gateway/src/main/resources/application-local.yml
@@ -15,6 +15,13 @@ spring:
                 - Path=/api/requestform-service/**
                 - Method=GET,POST,PUT,DELETE
 
+            - id: auth-service
+              uri: lb://auth-service
+              predicates:
+                - Path=/api/auth-service/**
+                - Method=GET,POST,PUT,DELETE
+
+
 eureka:
   instance:
     hostname: apigateway-service
