--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include(
         "hotketok-common-service",
         "hotketok-eureka-server",
         "hotketok-api-gateway",
+        "hotketok-chatting-service",
         "hotketok-jpa-service",
         "hotketok-requestform-service",
         "hotketok-infra-service",
