--- a/hotketok-infra-service/src/main/resources/application-local.yml
+++ b/hotketok-infra-service/src/main/resources/application-local.yml
@@ -38,3 +38,6 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+
+searchApi:
+  secretKey: ${SEARCH_API_KEY}
