--- a/settings.gradle
+++ b/settings.gradle
@@ -9,5 +9,6 @@ include(
         "hotketok-requestform-service",
         "hotketok-infra-service",
         "hotketok-user-service",
-        "hotketok-auth-service"
+        "hotketok-auth-service",
+        "hotketok-post-service",
 )
