--- a/hotketok-auth-service/src/main/resources/application-local.yml
+++ b/hotketok-auth-service/src/main/resources/application-local.yml
@@ -13,7 +13,7 @@ spring:
 
 jwt:
   secret: ThisIsHotketokSecretKeyThisIsHotketokSecretKey
-  access-exp-ms: 3600 # 1h
+  access-exp-ms: 3600000 # 1h
   refresh-exp-ms: 1209600000 # 14d
 
 eureka:
