--- a/hotketok-api-gateway/build.gradle
+++ b/hotketok-api-gateway/build.gradle
@@ -29,6 +29,10 @@ ext {
 }
 
 dependencies {
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
