fix: api-gateway에 각 서비스별 필터 적용 및 채팅 서비스,인프라 서비스(도로명주소 검색) 라우팅 추가

--- a/hotketok-api-gateway/src/main/resources/application-local.yml
+++ b/hotketok-api-gateway/src/main/resources/application-local.yml
@@ -9,18 +9,69 @@ spring:
       server:
         webflux:
           routes:
-            - id: requestform-service
-              uri: lb://requestform-service
-              predicates:
-                - Path=/api/requestform-service/**
-                - Method=GET,POST,PUT,DELETE
-
             - id: auth-service
               uri: lb://auth-service
               predicates:
                 - Path=/api/auth-service/**
                 - Method=GET,POST,PUT,DELETE
 
+            - id: requestform-service
+              uri: lb://requestform-service
+              predicates:
+                - Path=/api/requestform-service/**
+                - Method=GET,POST,PUT,DELETE
+              filters:
+                - JwtAuthFilter
+                - name: RoleFilter
+                  args:
+                    allowedRoles:
+                      - OWNER
+                      - TENANT
+
+            - id: example-service
+              uri: lb://requestform-service
+              predicates:
+                - Path=/api/example-service/**
+                - Method=GET,POST,PUT,DELETE
+              filters:
+                - JwtAuthFilter
+                - name: RoleFilter
+                  args:
+                    allowedRoles:
+                      - OWNER
+                      - TENANT
+
+            - id: chatting-service
+              uri: lb://chatting-service
+              predicates:
+                - Path=/api/chatting-service/**
+                - Method=GET,POST,PUT,DELETE
+              filters:
+                - JwtAuthFilter
+                - name: RoleFilter
+                  args:
+                    allowedRoles:
+                      - OWNER
+                      - TENANT
+                      - VENDOR
+
+            - id: infra-service
+              uri: lb://infra-service
+              predicates:
+                - Path=/api/infra-service/**
+                - Method=GET,POST,PUT,DELETE
+              filters:
+                - JwtAuthFilter
+                - name: RoleFilter
+                  args:
+                    allowedRoles:
+                      - OWNER
+                      - TENANT
+                      - VENDOR
+
+
+jwt:
+  secret: ThisIsHotketokSecretKeyThisIsHotketokSecretKey
 
 eureka:
   instance:
