feat: 주택 서비스(House-Service)에서 파일 업로드 기능을 위한 인프라 서비스 호출 internal API 개발

--- a/hotketok-house-service/src/main/resources/application-local.yml
+++ b/hotketok-house-service/src/main/resources/application-local.yml
@@ -49,3 +49,5 @@ logging:
 client:
   user-service:
     url: http://localhost:8084 # user-service의 주소
+  infra-service:
+    url: http://localhost:8081 # infra-service의 주소
