[feat] 초기정보 등록 입주민/집주인 -> 집등록 기능, 관리자가 집주인 승인/거절, 집주인이 입주민 승인/거절 기능 개발 (#33)
* chore: 주택 서비스(house-service) 모듈 설정

* feat: 주택 엔티티 설정

* feat: 도로명 주소 검색 외부 API 개발

* feat: 초기정보등록 집주인-> 집등록 API 개발

* feat: 관리자의 허가로 집등록이 된 사용자의 역할을 None-> Owner로 바꿔주기 위한 사용자 서비스 내부 API 개발

* feat: 집주인이 등록한 주택 유효성 검증 후 관리자 승인/거절 API 개발 (승인 시 주택 주인 역할 -> OWNER, 집 -> REGISTERED 로 변경, 거절 시 주택 삭제 )

* feat: 집주인이 입주민 사용자정보를 가져오기위한 사용자 서비스 내부 API 개발

* feat: 집주인이 입주민 승인 요청 목록 조회 및 승인/거절 API 개발

* fix: 주택 Entity 필드 추가(주택 종류, 별칭)로 인한 등록 서비스 로직 수정

* feat: 초기정보등록 입주민-> 집등록 API 개발

* fix: infra-service에서 ImageDto 관련을 FileDto로 이름 변경 (사진에 국한 하는게 아닌 모든 파일로 받기위함)

* feat: 주택 서비스(House-Service)에서 파일 업로드 기능을 위한 인프라 서비스 호출 internal API 개발

* fix: 초기정보 등록 집주인 -> 집등록 API 로직 변경 (주택 개수, 증명 파일 업로드)

* fix: 초기정보 등록 입주민 -> 집등록 API 로직 변경

--- a/hotketok-house-service/src/main/resources/application-local.yml
+++ b/hotketok-house-service/src/main/resources/application-local.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8084
+  port: 8087
 
 spring:
   application:
-    name: user-service
+    name: house-service
   cloud:
     kubernetes:
       config:
@@ -17,15 +17,11 @@ spring:
 
   # ===== 데이터소스 =====
   datasource:
-    url: jdbc:h2:tcp://localhost/~/user
+    url: jdbc:h2:tcp://localhost/~/house
     username: sa
     password:
     driver-class-name: org.h2.Driver
-    #url: jdbc:h2:file:~/user
-    #username: sa
-    #password:
-    #driver-class-name: org.h2.Driver
-#
+
   # ===== JPA =====
   jpa:
     hibernate:
@@ -37,7 +33,7 @@ spring:
 
 eureka:
   instance:
-    hostname: user-service
+    hostname: house-service
     preferIpAddress: true
   client:
     registry-fetch-interval-seconds: 3
@@ -49,3 +45,9 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
+
+client:
+  user-service:
+    url: http://localhost:8084 # user-service의 주소
+  infra-service:
+    url: http://localhost:8081 # infra-service의 주소
