--- a/hotketok-user-service/src/main/resources/application-local.yml
+++ b/hotketok-user-service/src/main/resources/application-local.yml
@@ -49,3 +49,7 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
+
+client:
+  house-service:
+    url: http://localhost:8090 # house-service의 주소
