fix: house-service API Path 수정 및 API-gateway 라우팅 버그 수정

--- a/hotketok-api-gateway/src/main/resources/application-local.yml
+++ b/hotketok-api-gateway/src/main/resources/application-local.yml
@@ -56,7 +56,7 @@ spring:
                       - TENANT
 
             - id: house-service
-              uri: lb://infra-service
+              uri: lb://house-service
               predicates:
                 - Path=/api/house-service/**
                 - Method=GET,POST,PUT,DELETE
