refactor: 주택 서비스 호출 참조 후 로직 적용

--- a/hotketok-user-service/src/main/resources/application-local.yml
+++ b/hotketok-user-service/src/main/resources/application-local.yml
@@ -17,14 +17,14 @@ spring:
 
   # ===== 데이터소스 =====
   datasource:
-    url: jdbc:h2:tcp://localhost/~/user
+#    url: jdbc:h2:tcp://localhost/~/user
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+    url: jdbc:h2:file:~/user
     username: sa
     password:
     driver-class-name: org.h2.Driver
-    #url: jdbc:h2:file:~/user
-    #username: sa
-    #password:
-    #driver-class-name: org.h2.Driver
 #
   # ===== JPA =====
   jpa:
