[feat] 마이페이지 관련 API 개발 및 주택 서비스 버그 수정 (#37)
* refactor: User 관련 내부 API Path 이름 수정

* fix: House Entity에 현재 설정된 주택 플래그 필드 추가

* feat: 회원의 현재 설정된 주택의 정보를 주는 주택 서비스내부 API 개발

* feat: 회원의 현재 설정된 주택의 정보를 가져오도록 하는 주택 서비스 내부 API 호출 기능 개발

* feat: 사용자 서비스 마이페이지 개인정보 호출 API 개발

* fix: 사용자 역할이 NONE 일 때 모두 금지되는 버그 수정

* feat: 마이페이지 개인정보 수정(이름, 프로필사진)

* fix: house-service API Path 수정 및 API-gateway 라우팅 버그 수정

* feat: 회원의 역할과 주소로 주택의 정보를 주는 주택 서비스 내부 API 개발

* feat: 회원이 현재 선택한 주소를 설정하도록 User Entity에 현재 선택한 주소 필드 추가 및 현재 선택한 주소 변경 API 개발

* fix: 초기정보등록 로직 수정

* fix: 마이페이지 회원정보 조회API 수정

--- a/hotketok-user-service/src/main/resources/application-local.yml
+++ b/hotketok-user-service/src/main/resources/application-local.yml
@@ -9,6 +9,11 @@ spring:
       config:
         enabled: false
 
+  servlet:
+    multipart:
+      max-file-size: 50MB    # 파일 하나의 최대 크기
+      max-request-size: 200MB # 전체 요청의 최대 크기
+
   # ===== H2 콘솔 =====
   h2:
     console:
@@ -49,3 +54,9 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
+
+client:
+  house-service:
+    url: http://localhost:8090 # house-service의 주소
+  infra-service:
+    url: http://localhost:8089 # infra-service의 주소
