feat: 쪽지 기능 개발 (#32)
* fix: 채팅 서비스 포트번호 변경

* chore: resources/yml 파일 기본 설정

* feat: 쪽지 관련 도메인 기본 설계

* refactor: 호수 반환 제외

* feat: 실행을 위한 빌드 버전 추가 및 받은 쪽지 목록 조회 구현

* fix: dto 재사용을 위한 파일 이름 변경

* feat: 보낸 쪽지 목록 조회 구현

* feat: 쪽지 도메인 쪽지 태그와 연결관계 정립

* feat: 쪽지 내용 상세 조회 구현

* refactor: 한 쪽지에 다중 태그 가능하도록 수정

* feat: 쪽지 작성 기능 구현

* feat: 쪽지 및 쪽지 태그 연결 도메인 생성

* feat: 태그 연결 테이블 변경 사항 반영

* refactor: 주택 서비스 호출 참조 후 로직 적용

* feat: 하우스 태그 도메인 포함

* feat: 이웃 목록 조회 기능 구현

* refactor: 다중 태그 관리 로직 수정

* refactor: 통신 반환 리스트 문제 해결

* refactor: 응답 구조 직렬화로 개선

* refactor: 유저 헤더 로직 반영

* fix: url 통일을 위한 호출 변경

* refactor: response entity 반환 제거

* refactor: 이웃 목록 조회 변경 로직 적용

* refactor: 받은/보낸 쪽지 동일 로직 적용

* fix: 호출 url 변경

* refactor: 커스텀 에러 코드 적용

--- a/hotketok-house-service/src/main/resources/application-local.yml
+++ b/hotketok-house-service/src/main/resources/application-local.yml
@@ -16,8 +16,14 @@ spring:
       path: /h2-console
 
   # ===== 데이터소스 =====
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/house
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+
   datasource:
-    url: jdbc:h2:tcp://localhost/~/house
+    url: jdbc:h2:file:~/house
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -45,6 +51,7 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
+    com.hotketok: info
 
 client:
   user-service:
