--- a/settings.gradle
+++ b/settings.gradle
@@ -10,5 +10,6 @@ include(
         "hotketok-infra-service",
         "hotketok-user-service",
         "hotketok-auth-service",
+        "hotketok-post-service",
         "hotketok-house-service"
 )
