--- a/hotketok-commonbill-service/src/main/resources/application-local.yml
+++ b/hotketok-commonbill-service/src/main/resources/application-local.yml
@@ -45,3 +45,7 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
+
+client:
+  user-service:
+    url: http://localhost:8088 # user-service의 주소
