feat: 공지사항 도메인 구현

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,5 +11,6 @@ include(
         "hotketok-user-service",
         "hotketok-auth-service",
         "hotketok-post-service",
-        "hotketok-house-service"
+        "hotketok-house-service",
+        "hotketok-notice-service",
 )
