feat: api-gateway 라우터에 commonbill-service 추가 및 url-path 수정

--- a/hotketok-api-gateway/src/main/resources/application-local.yml
+++ b/hotketok-api-gateway/src/main/resources/application-local.yml
@@ -85,6 +85,18 @@ spring:
                       - TENANT
                       - VENDOR
 
+            - id: commonbill-service
+              uri: lb://commonbill-service
+              predicates:
+                - Path=/api/commonbill-service/**
+                - Method=GET,POST,PUT,DELETE
+              filters:
+                - JwtAuthFilter
+                - name: RoleFilter
+                  args:
+                    allowedRoles:
+                      - OWNER
+                      - TENANT
 
 jwt:
   secret: ThisIsHotketokSecretKeyThisIsHotketokSecretKey
