--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include(
         "hotketok-infra-service",
         "hotketok-user-service",
         "hotketok-auth-service",
+        "hotketok-house-service",
+        "hotketok-commonbill-service",
         "hotketok-post-service",
-        "hotketok-house-service"
 )
