--- a/hotketok-review-service/src/main/resources/application-local.yml
+++ b/hotketok-review-service/src/main/resources/application-local.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8093
+  port: 8095
 
 spring:
   application:
-    name: requestform-service
+    name: review-service
 
   servlet:
     multipart:
@@ -22,11 +22,11 @@ spring:
       path: /h2-console
 
   # ===== 데이터소스 =====
-  datasource:
-    url: jdbc:h2:file:~/review
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/requestform
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
 
   # ===== JPA =====
   jpa:
@@ -51,6 +51,15 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
+
+
+openai:
+  model: ${GPT_MODEL}
+  api:
+    key: ${GPT_API_KEY}
+    url: ${GPT_API_URL}
+
+
 
 client:
   infra-service:
