fix: 잘못된 참조 수정

--- a/hotketok-post-service/src/main/resources/application-local.yml
+++ b/hotketok-post-service/src/main/resources/application-local.yml
@@ -35,7 +35,7 @@ spring:
 
 eureka:
   instance:
-    hostname: chatting-service
+    hostname: notice-service
     preferIpAddress: true
   client:
     registry-fetch-interval-seconds: 3
