[feat] 공지사항 관련 기능 개발 (#41)
* feat: 공지사항 도메인 구현

* feat: 공지사항 목록 조회 구현

* refactor: dto class -> record 변경

* feat: 공지사항 세부 조회 구현

* feat: 공지사항 작성 구현

* feat: 공지사항 수정 구현

* feat: 공지사항 삭제 구현

* refactor: 유저 헤더 로직 적용

* fix: 잘못된 참조 수정

* fix: 누락 의존성 및 잘못된 참조 수정

* chore: 비사용 폴더 삭제

* refactor: 집주인 단일 프로필 조회 메서드 추가

--- a/hotketok-notice-service/src/main/resources/application-local.yml
+++ b/hotketok-notice-service/src/main/resources/application-local.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8097
+  port: 8098
 
 spring:
   application:
-    name: post-service
+    name: notice-service
 
   # ===== H2 콘솔 =====
   h2:
@@ -13,13 +13,13 @@ spring:
 
   # ===== 데이터소스 =====
 #  datasource:
-#    url: jdbc:h2:tcp://localhost/~/chatting
+#    url: jdbc:h2:tcp://localhost/~/notice
 #    username: sa
 #    password:
 #    driver-class-name: org.h2.Driver
 
   datasource:
-    url: jdbc:h2:file:~/post
+    url: jdbc:h2:file:~/notice
     username: sa
     password:
     driver-class-name: org.h2.Driver
