--- a/hotketok-requestform-service/src/main/resources/application-local.yml
+++ b/hotketok-requestform-service/src/main/resources/application-local.yml
@@ -23,7 +23,7 @@ spring:
 
   # ===== 데이터소스 =====
   datasource:
-    url: jdbc:h2:file:~/review
+    url: jdbc:h2:file:~/requestform
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -51,6 +51,12 @@ eureka:
 logging:
   level:
     org.hibernate.SQL: debug
+
+    openai:
+      model: ${GPT_MODEL}
+      api:
+        key: ${GPT_API_KEY}
+        url: ${GPT_API_URL}
 
 client:
   infra-service:
