chore: 공사업체 서비스(vendor-service) 모듈 설정

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,5 @@ include(
         "hotketok-post-service",
         "hotketok-house-service",
         "hotketok-notice-service",
+        "hotketok-vendor-service"
 )
