feat: 초기정보 등록 사용자 -> 공사업체 등록 API 개발

--- a/hotketok-api-gateway/src/main/resources/application-local.yml
+++ b/hotketok-api-gateway/src/main/resources/application-local.yml
@@ -97,6 +97,19 @@ spring:
                     allowedRoles:
                       - OWNER
                       - TENANT
+                      -
+            - id: vendor-service
+              uri: lb://vendor-service
+              predicates:
+                - Path=/api/vendor-service/**
+                - Method=GET,POST,PUT,DELETE
+              filters:
+                - JwtAuthFilter
+                - name: RoleFilter
+                  args:
+                    allowedRoles:
+                      - NONE
+                      - VENDOR
 
 jwt:
   secret: ThisIsHotketokSecretKeyThisIsHotketokSecretKey
