[feat] 공사업체 후기 기능 개발  (#45)
* feat: 리뷰 작성 구현

* fix: env 활성 의존성 추가

* fix: env 등록 로직 추가

* fix: 인프라 서비스 env 활성 의존성 추가

* refactor: env 파일 직접 설정을 통한 불필요 라인 삭제

* feat: 리뷰 작성 request 형식 설정

* feat: 업체별 리뷰 목록 조회 구현

* fix: 리뷰 작성 사진 업로드 오류 해결

* feat: 리뷰 삭제 구현

* refactor: 유저 헤더 연결 로직 연결

* fix: 삭제된 라인 복구

* refactor: 후기 작성 이미지 연결 object Mapper 제외

* refactor: 리뷰이미지 관계 분리

* chore: 누락 어노테이션 추가

* chore: 데이터소스 설정 변경

* fix: 들여쓰기 조정

--- a/hotketok-review-service/src/main/resources/application-local.yml
+++ b/hotketok-review-service/src/main/resources/application-local.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8093
+  port: 8095
 
 spring:
   application:
-    name: requestform-service
+    name: review-service
 
   servlet:
     multipart:
@@ -22,8 +22,13 @@ spring:
       path: /h2-console
 
   # ===== 데이터소스 =====
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/review
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
   datasource:
-    url: jdbc:h2:tcp://localhost/~/requestform
+    url: jdbc:h2:file:~/review
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -39,7 +44,7 @@ spring:
 
 eureka:
   instance:
-    hostname: requestform-service
+    hostname: review-service
     preferIpAddress: true
   client:
     registry-fetch-interval-seconds: 3
@@ -52,13 +57,9 @@ logging:
   level:
     org.hibernate.SQL: debug
 
-openai:
-  model: ${GPT_MODEL}
-  api:
-    key: ${GPT_API_KEY}
-    url: ${GPT_API_URL}
-
 client:
   infra-service:
     url: http://localhost:8089 # infra-service의 주소
+  user-service:
+    url: http://localhost:8088 # user-service의 주소
 
