--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ include(
         "hotketok-house-service",
         "hotketok-commonbill-service",
         "hotketok-post-service",
+        "hotketok-review-service",
         "hotketok-house-service",
         "hotketok-notice-service",
 )
