[feat] 초기정보 등록 -> 공사업체 등록 기능 개발 (#48)
* chore: 공사업체 서비스(vendor-service) 모듈 설정

* feat: 공사업체 엔티티 설정

* feat: 이미지(파일) 업로드/삭제 기능을 사용하기 위한 인프라 서비스 설정

* feat: 사용자 역할을 공사업체로 바꿔주기 위한 사용자 서비스 설정

* feat: 초기정보 등록 사용자 -> 공사업체 등록 API 개발

* feat: 공사업체 관리자 승인/거절 API 개발

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,4 +16,5 @@ include(
         "hotketok-review-service",
         "hotketok-house-service",
         "hotketok-notice-service",
+        "hotketok-vendor-service"
 )
